[Backend] - сохранение доски для рисования
